# puzzle-program

./: .gitignore  README.md  config.ini  pyproject.toml
diagrams/: architekturentscheidungen.md  laufzeitsicht.md  loesungsstrategie.md  qualitaetsanforderungen.md  querschnittliche_konzepte.md  sequence_diagram.mmd  verteilungssicht.md
gopro_calibration/: calibration.py  gopro_calibration.npz
src/camera_controller/: __init__.py  controller.py  flatten_image.py  mark_aruco.py  mock_controller.py
src/coordinate_mapper/: __init__.py  mapper.py
src/microcontroller_interface/: __init__.py  interface.py  manual_uart_console.py  uart_handler.py  uart_interface.py
src/puzzle_models/: __init__.py  placements.py  ports.py
src/puzzle_orchestrator/: __init__.py  __main__.py  config.py  orchestrator.py
src/puzzle_solver/: __init__.py  brute_force.py  corners.py  greedy.py  match.py  pull_pieces.py  simulator.py  solver.py
src/puzzle_solver/component/: puzzle_piece.py
src/puzzle_solver/utilities/: __init__.py  draw_puzzle_piece.py  polygon_analysis.py  puzzle_piece_loader.py  solver.py
