[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle-program"
version = "0.1.0"
description = "Puzzle orchestrator project with camera and solver modules."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tim" }]
dependencies = ["numpy>=1.24", "opencv-python>=4,<5", "shapely>=2,<3"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
